# pets-cattle-and-code-examples

./: .gitignore  README.md
libclang-example/: CMakeLists.txt  README.md  example.py  main.cc  span.cc  span.h
query-example/: README.md  example  lib.cc  lib.h  main.cc
transform-example/: CMakeLists.txt  README.md  lib.cc  lib.h  main.cc
transform-example/pointer-to-ref/: CMakeLists.txt  PointerToRef.cpp
